# obs_scene_switcher

./: Cargo.toml  README.md
src/: app.rs  blocking_obs_client.rs  lib.rs  main.rs
