[package]
name = "obs_scene_switcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obws = "0.11.1"
egui = "0.19.0"
eframe = "0.19.0"
anyhow = "1.0.66"
tokio = {version = "1.21.2", features = ["full"]}

